<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_exit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertsubmit"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/positiveButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:textColor="#008000"
            tools:ignore="RtlHardcoded"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="20"/>

        <TextView
            android:id="@+id/negativeButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/no"
            android:textSize="16sp"
            android:textColor="@color/red"
            tools:ignore="RtlHardcoded,TextContrastCheck,TextSizeCheck" />

    </LinearLayout>


</LinearLayout>

