<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:focusableInTouchMode="true"
    tools:context=".activities.RegistrationActivity">

    <TextView
        android:id="@+id/textViewProfession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/profession"
        android:textColor="@color/handles"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextExperience" />

    <CheckBox
        android:id="@+id/checkBoxNurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:buttonTint="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/nurse"
        android:textColor="@color/handles"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextSpecialization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfession" />

    <CheckBox
        android:id="@+id/checkBoxDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:buttonTint="@color/white"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/doctor"
        android:textColor="@color/handles"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextSpecialization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfession" />

    <EditText
        android:id="@+id/editTextTextFirstName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/handles"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextMiddleName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/middle_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextExperience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextExperience"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="364dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/experience"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextSpecialization"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/specialization"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfession"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonOnRegisterDialogFragment"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/handles"
        android:text="@string/register1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextTextLastName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMiddleName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarRegist"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <View
        android:id="@+id/viewFocusRegistr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/focus"
        android:visibility="invisible"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="602dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
