<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shimmer_layout2"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile_avatar"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_text"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/first_name"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_first_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_text"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/middle_name"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_middle_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_text"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/last_name"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_last_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_text"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:paddingStart="8dp"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/specialization"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_specialization"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_text"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:text="@string/experience"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_experience"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_text"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center_vertical"
            android:importantForAutofill="no"
            android:paddingStart="8dp"
            android:textColor="@color/handles"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</com.facebook.shimmer.ShimmerFrameLayout>