<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/ripple_image"
    android:foreground="@drawable/patientview_background"
    android:clickable="true"
    android:elevation="4dp"
    android:orientation="vertical"
    tools:ignore="TextSizeCheck">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/patient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/avatar"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/app_name"
        android:textColor="@color/handles"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/patient"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/avatar"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/sex"
        android:textColor="@color/handles"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/sex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sex"
        android:layout_alignTop="@id/sex"
        android:layout_toEndOf="@id/sex"
        android:fontFamily="@font/open_sans_light"
        android:textColor="@color/handles"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sex"
        android:layout_alignTop="@id/sex"
        android:layout_marginStart="100dp"
        android:layout_toEndOf="@id/sex"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/room"
        android:textColor="@color/handles"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/room2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/room"
        android:layout_alignTop="@id/room"
        android:layout_toEndOf="@id/room"
        android:fontFamily="@font/open_sans_light"
        android:textColor="@color/handles"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sex"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/avatar"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/curatorDoctor"
        android:textColor="@color/handles"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/doctor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/doctor"
        android:layout_alignTop="@id/doctor"
        android:layout_toEndOf="@id/doctor"
        android:fontFamily="@font/open_sans_light"
        android:textColor="@color/handles"
        android:textSize="13sp" />

</RelativeLayout>