<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dialog_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:paddingBottom="16dp"
    android:paddingTop="5dp"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/onLoginActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/onLoginActivity"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/handles"
        android:text="@string/register1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/CloseRegister"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945"
        app:srcCompat="@drawable/close1"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
